--- a/index.html
+++ b/index.html
@@ -8,6 +8,25 @@
     <link rel="stylesheet" href="css/style.css">
 
 </head>
-
+<body>
+    <header>
+        <nav>
+            <a href="Inicio.html">Inicio</a>
+            <a href="productos.html">Productos</a>
+            <a href="gatos.html">Gatos</a>
+            <a href="perros.html">Perros</a>
+            <a href="aves.html">Aves</a>
+            <a href="login.html">Salir</a>
+        </nav>
+        <section class="textos-header">
+            <h1>Somos tu mejor Elección</h1>
+        </section>
+        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none"
+                style="height: 100%; width: 100%;">
+                <path d="M0.00,49.98 C150.00,150.00 349.20,-50.00 500.00,49.98 L500.00,150.00 L0.00,150.00 Z"
+                    style="stroke: none; fill: rgb(255, 255, 255);"></path>
+            </svg></div>
+    </header>
+    <main>
 </body>
 </html>
