--- a/index.html
+++ b/index.html
@@ -9,22 +9,17 @@
 
 </head>
 <body>
-    <footer>
-        <div class="contenedor-footer">
-            <div class="content-foo">
-                <h4>Telefono</h4>
-                <p></p>
-            </div>
-            <div class="content-foo">
-                <h4>Email</h4>
-                <p></p>
-            </div>
-            <div class="content-foo">
-                <h4>Ubicación</h4>
-                <p></p>
+    <section class="contenedor sobre-nosotros">
+        <h2 class="titulo">Bienvenida </h2>
+        <div class="contenedor-sobre-nosotros">
+            <img src="img/logo.jpg" alt="" class="imagen-about-us">
+            <div class="contenido-textos">
+                <h3><span>Misión</span></h3>
+                <p>La Misión de Tienda de Mascotas consiste en brindar una solución integral a la atención de la mascota, a partir de una inmejorable oferta de producto, precio, calidad y servicio.</p>
+                <h3><span>Visión</span></h3>
+                <p>La Visión de Tienda de Mascotas es continuar siendo la empresa Nº 1 en la comercialización de productos para mascotas en la Región Patagónica, operando con sucursales en las principales ciudades.</p>
             </div>
         </div>
-        <h2 class="titulo-final"></h2>
-    </footer>
+    </section>
 </body>
 </html>
