--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
 </head>
 <body>
+    <body>
+        
     <section class="contenedor sobre-nosotros">
         <h2 class="titulo">Bienvenida </h2>
         <div class="contenedor-sobre-nosotros">
@@ -21,5 +23,6 @@
             </div>
         </div>
     </section>
+   
 </body>
 </html>
